--- a/Drill/Week-4.Rmd
+++ b/Drill/Week-4.Rmd
@@ -1,15 +1,23 @@
+---
+output:
+  html_document:
+    css: ~/KaplanFiles/DCF-2014/CSS/DCF-style.css
+    fig_caption: yes
+    toc: no
+---
 
-```{r include=FALSE}
-require(mosaic)
-require(dplyr)
-require(ggplot2)
-require(tidyr)
-require(ScoreR)
-startProblem("DCF-Assignment4")
+```{r child="/Users/kaplan/KaplanFiles/DCF-2014/CSS/DCF-common.Rmd"}
 ```
+
+<!--- Control the display of answers -->
+<style>
+  aside.answer {color:white; background-color:blue; display:none;}
+</style>
 
 
 ## Week 4
+
+### Functions and their roles
 
 Identify each of these functions as either a **Data Verb**, a **Transformation**, a **Summary Function**, or a **Quick Presentation** or a **Comparison Expression**.
 
@@ -19,7 +27,7 @@ Identify each of these functions as either a **Data Verb**, a **Transformation**
 * `mean()` <aside class="answer"> Summary Function</aside>
 * `filter()` <aside class="answer"> Data Verb</aside>
 * `summary()`  <aside class="answer">Quick presentation </aside>
-* `summarize()` <aside class="answer">Data verb</aside>
+* `summarise()` <aside class="answer">Data verb</aside>
 * `anti_join()` <aside class="answer">Data verb</aside>
 * `merge()` <aside class="answer">Data verb</aside>
 * `glimpse()` <aside class="answer">Quick presentation</aside>
@@ -32,220 +40,119 @@ These questions refer to the `diamonds` data table.  Take a look at the codebook
 * What's the largest diamond depth observed for each clarity group?
 * What color of diamond is most common for each of the different cuts?
 
+### Output from Summarising
 
-#### Four
+Imagine a data table, `Patients`, with categorical variables `name`, `diagnosis`, `sex`, and quantitative variable `age`.
 
-Use `==` and `mean()` to find the proportion of cases at a given level, e.g. what fraction of smokers have died.  Here's an example of the syntax you'll need, using `sex` instead of `smoker`.
-```{r}
-data(NHANES, package="DCF") 
-NHANES %>% group_by( sex ) %>%  
-  summarise( living=mean( death=='alive', na.rm=TRUE ))
+You have a statement in the form
+```
+Patients %>%
+  group_by(  some variables ) %>%
+  summarise( count=n(), meanAge=mean(age) )
 ```
 
-Add in: Look carefully at the quantity being given to `mean()`.  The variable name is `death`.  Since it's a variable name, there are no quotes around it.  The `==` tests of equality.  The quoted string, `"alive"`, is one of the levels of the categorical variable `death`.  Altogether, `mean( death=="alive" )` means "the proportion of cases still alive."^[Admittedly, it's a bit odd to have a variable named `death` that can have a value `"alive"`. In the NHANES data, `death` indicates whether or not the person died, and whether the death (if any) was from cardiovascular causes.]
+Replacing <code>some variables</code> with each of the following, say ...   
+
+* what variables will appear in the output
+* whether `meanAge` will contain any new information.
+
+#. `sex`
+#. `diagnosis`
+#. `sex`, `diagosis`
+#. `age`, `diagnosis`
+#. `age`
 
 
-Then break down by smoker, etc. as the exercise.  Don't show them this, but ask them to draw conclusions: which group is more likely to be alive.
 
-```{r}
-NHANES %>% group_by(smoker) %>% 
-  summarise( count=n(), 
-             living=mean(death=="alive", na.rm=TRUE) )
-NHANES %>% group_by(sex, smoker) %>%
-  summarise( living=mean(death=="alive", na.rm=TRUE) )
+### Wide and Narrow
+
+Here are three data tables with the same information:
+```{r cache=TRUE, echo=FALSE}
+set.seed(102)
+Big <-
+  BabyNames %>% 
+  filter( count > 500 )
+theseNames <-  unique(Big %>% sample_n(size=10))[["name"]] %>% head( 3 )
+One <- 
+  BabyNames %>%
+  filter( name %in% theseNames, year %in% c(1912,2012)) %>%
+  group_by( name, sex, year ) %>%
+  summarise( nbabies=sum(count) ) %>% arrange(year)  %>% tail(10)
+Two <- One %>%
+  spread( key=sex, value=nbabies )
+Three <- One %>% 
+  spread( key=year, value=nbabies )
+Four <- One %>%
+  spread( key=name, value=nbabies)
+options( xtable.NA.string = "NA" )
+Five <- spread(Four, key=sex, value=year )
 ```
 
-Then, ask them to break it down by people over 60 and people under 60.
-
-```{r}
-NHANES %>% group_by(age<=60,sex, smoker) %>%
-  summarise( living=mean(death=="alive", na.rm=TRUE) )
-```
-
-Among the young males, which group is more likely to be alive: smokers or non-smokers.  How about among older males?  Young females? Older females?
-
-Explain something about Simpson's paradox.
-
-Another EXERCISE ...
-
-Make a stacked bar chart of proportions for each of the smoking, sex, age groups.  Use this to illustrate the different kinds of plots.
-
-Another EXERCISE ...
-
-Using `ntile()` to convert quantitative to categorical.  List some of the other converters, e.g., `cut()`.
-
-### END OF EXERCISE
-
-## EXERCISES:
-
-
-### One
-
-Explain in English what these commands will do:
-```{r results='hide'}
-NHANES %>% 
-  group_by( sex, smoker ) %>%
-  summarise( n=n() )
-```
-
-### Two
-
-
-Maybe in this section, mean weight for diabetic and not.
-
-```{r}
-foo <- group_by(NHANES, sex, diabetic) %>% 
-  summarise(wt=mean(weight,na.rm=TRUE),n=n(),
-            se=sd(weight, na.rm=TRUE)/sqrt(n)) 
-ggplot(foo, aes(x=sex, group=diabetic,y=wt,width=.5))  + geom_bar(alpha=.5,position='dodge',stat='identity',aes(fill=diabetic)) + geom_errorbar(aes(ymax=wt+2*se,ymin=wt-2*se,),position='dodge')  + ylim(0,80) + guides(fill=FALSE)
-```
-
-For errorbars and such, you need to use `position=position_dodge(width=.5)` to separate the groups equally.
-
-```{r}
-ggplot(foo, aes(group=sex, x=diabetic, y=wt,width=.5))  + 
-#  geom_bar(alpha=.3,aes(fill=sex),position='dodge',stat='identity') + 
-  geom_errorbar(aes(ymax=wt+2*se,ymin=wt-2*se,color=sex),
-                position=position_dodge(width=0.3),weight=3,size=2,width=.2)  + 
-  ylim(0,80) + ylab("Weight") + 
-  xlab("Diabetes status")
-```
-
-
-QUESTIONS TO ASK:
-* What variables are here?
-* What cases are here in the glyph-ready data?
-* Which variable is represented by color?
-* Which variable sets th position of the subgroup w.r.t. the overall group?
-* The length of the error bars reflects a quantity called the "standard error".  
-
-Make graphs to compare diabetics to non-diabetics in each group, and to compare males to females in each group.
-
-Perhaps jazz it up with age-group.
-
-## What fraction are diabetic in the various age groups
-
-```{r eval=FALSE}
-mutate(NHANES, AgeGroup=ntils(age,n=10,format='left')) %>% 
-  group_by(sex,AgeGroup) %>%
-  summarize(dfrac=mean(diabetic=='diabetic',na.rm=TRUE),
-            se=sqrt(dfrac*(1-dfrac)/length(diabetic)) )-> hoo
-ggplot(hoo, aes(x=AgeGroup,y=dfrac,group=sex)) + geom_bar(alpha=.3,aes(fill=sex,color=sex),position='dodge',stat='identity',width=4) + geom_errorbar(aes(ymax=dfrac+se,ymin=dfrac-se,color=sex),position='dodge')
-```
-
-### Proportion with summarize:
-
-The point here is that once you've reduced the data to a tally of each group, you want to keep those cases, so you want a mutate().  But even in `mutate()`, aggregation operators work over the whole group.
-
-The last grouping variable gets eliminated each time you use `mutate()` or `summarize()`.
-
-```{r}
-group_by(NHANES, sex, smoker, diabetic) %>% tally() -> tmp
-# get rid of the NA here
-filter(tmp, diabetic != 'NA' & smoker != 'NA') %>%
-mutate( total=sum(n),frac=n/total) %>% filter( diabetic=='diabetic')
-```
-
-## Create a proportion function
-
-Do I want this?
-
-```{r}
-simple <- function(v) {
-  sum(v,na.rm=TRUE)/length(v)
+<style>
+td, th {
+    padding: 3px;
 }
-proportion <- function(.data,...) {
-  do(.data,data.frame(prop.table(do.call(table,select(.,...)))))
+tr  {
+    vertical-align: "top";
+    padding: 15px;
+    border-collapse: collapse;
 }
-# example
-# group_by(NHANES,sex,smoker) %>% proportion(diabetic)
+</style>
+</head>
+
+<body>
+<table border=1>
+ <caption>The same data presented in three versions</caption> 
+  <tr> 
+    <th>Version One</th><th>Version Two</th><th>Version Three</th>
+  </tr>
+  <tr>
+    <td>
+```{r echo=FALSE,results='asis'}
+xtable(One)
 ```
-
-## TO DO
-
-* Fix NHANES to turn `NaN` into `NA` in the numerical variables.
-* Set the option `"na.rm"` to `TRUE` when the DCF package is loaded.
-* Have earlier examples with `summary()` of a single variable:
+    </td>
+    <td>
+```{r echo=FALSE,results='asis'}
+xtable(Two)
 ```
-with( NHANES, summary(height) )
+    </td> 
+    <td>
+```{r echo=FALSE,results='asis'}
+xtable(Three)
 ```
-That will let you show what the variables look like.  Or maybe show a boxplot.
-
-## Returned values, arguments, inputs and outputs
-
-Explain what these are.
-
-Also, assignment.  Use `<-` to distinquish between assignment and named arguments.   `<-` gives the output of a function to a name, or, in other words, "assigns a value to an object named ..."
-
-
-For each sex and smoker group, what fraction has diabetes?
-```{r eval=FALSE}
-group_by(NHANES,sex,smoker) %>% mutate(count=n()) -> tmp
-summarize(tmp, sum(diabetic=='diabetic')/count )
-dcast(group_by(NHANES,sex,smoker) %>% proportion(diabetic),
-      ~diabetic,value.var='Freq')
-tmp <- group_by(NHANES,sex) %>% summarize( k=sum(diabetic=='diabetic') )
-ggplot(tmp, aes(x=sex,y=n,fill=smoker)) + 
-  geom_bar(stat='identity',position='fill')
+    </td>
+ </tr>
+</table>
+ 
+#. What is the meaning of a case in each of the tables?
+    * Version One
+    * Version Two
+    * Version Three
+#. Comparing Version One to Version Two, which table is narrow and which one is wide?  
+#. What "key" variable from the narrow table is being used?
+#. There are no `NA`s in Version One, but there are in Versions Two and Three.  Why?
+#. Version Two has 6 cases, while Version 3 has only 5 cases.  How can they contain the same information?
+#. Version Three was "spread" from Version One.  What variable was used to denote the spread columns?
+#. Version One can be created by gathering columns from Version Two.    
+    * Which variables from Two were gathered into One?  
+    * What "key" variable, not explicitly named in Version Two, does appear in Version One?
+    * Where where the values taken from Version Two to use as levels in the key variable created for Version One? 
+* Suppose you want to create the following table with the name of the most popular name of either sex each year
+    ```{r echo=FALSE}
+One %>%
+  group_by( year, sex ) %>% 
+  filter( rank( nbabies )==1)
 ```
+    What should the chain of commands look like to make this from Table One?
+* Suppose you want to calculate the ratio of male to female in each name in each year.  Like this:
+    ```{r echo=FALSE}
+Two %>% 
+  mutate( ratio=F/M) %>%
+  select( name, year, ratio )
 
-
-### NOTE: For proportion ...
-
-```{r}
-group_by(NHANES, sex,smoker) %>% summarise(pd=mean(diabetic=='diabetic',na.rm=TRUE),sz=n(),se=sqrt(pd*(1-pd)/sqrt(sz)))
 ```
-
-
-## How Many?
-
-n() and groupwise n().  n() takes no arguments because it wouldn't matter which variable you used: they all have the same length
-
-
-QUESTION:  Why are these two quantities so different?
-```{r}
-summarise( NHANES, 
-           mean( height, na.rm=TRUE ), 
-           mean( hgtDiff, na.rm=TRUE ) )
-```
-
-## Grouping
-
-Often, you will be interested in studying **groups** of cases, for instance the males and females in `NHANES` or the smoking diabetics versus non-smoking diabetics. 
-
-In order to do the grouping, you need one or more variables that specify the groups, for instance, `sex`, `diabetic`, and `smoker` in NHANES.  Use the `group_by()` function to specify which variables you want to use.
-
-Grouping cases doesn't in itself do anything.  Instead, grouping sets things up so that `summarize()`, `mutate()`, and some other functions can do things on a group-by-group basis.  Example:
-
-```{r}
-NHANES <- group_by( NHANES, sex )
-summarise( NHANES, typicalAge=median(age, na.rm=TRUE) )
-```
-
-
-
-
-
-
-## Style
-
-As mentioned before, re-using a name can make your commands easier to read.
-
-Reassignment of the output to the input data frame may make sense for a transform.  But it is generally a bad idea for an aggregation.  (Explain why.  Hint: What are the cases in the input and output.) [Show a reassignment in a summarize() and say DON'T DO THIS!]
-
-### Pipes
-
-
-
-
-ANS: Group by diabetes status rather than sex.  Kill the NAs.
-
-Add a new variable to `small` that gives the mean height for that person's group.
-
-See [this set of exercises](http://www.public.iastate.edu/~hofmann/stat480/homework/dplyr%20drills.html)
-
-
-
-
+    * Would you rather start from Version Two or Version Three?
+    * If you were given Version One, would you rather work directly on that with the data verbs or, first, translate to one of the other forms? 
 ```{r child="../CSS/DisqusTemplate.Rmd"}
 ```
